rustc_codegen_c/src/builder/snapshots/test__declare_locals.snap
---
created: "2019-02-07T00:21:01.107529502Z"
creator: insta@0.6.1
source: rustc_codegen_c/src/builder/test.rs
expression: output
---
/* generated by r2c2 version 0.0.0 */
#include <stdint.h>
#include <stdbool.h>

/*                                                    */
/*                    END PREAMBLE                    */
/*                                                    */

void declare_locals(void)
{
    double dbl;
    void (*f)(void);  /* i'm a function pointer with a comment */
}


