rustc_codegen_c/src/builder/snapshots/test__def_fn.snap
---
created: "2019-12-08T16:29:55.795832348Z"
creator: insta@0.7.4
source: rustc_codegen_c/src/builder/test.rs
expression: output
---
/* generated by r2c2 version 0.0.0 */
#include <stdint.h>
#include <stdbool.h>

/*                                                    */
/*                    END PREAMBLE                    */
/*                                                    */

uint32_t * myfn(uint32_t _1, uint32_t _2, bool _3)
{
}


