rustc_codegen_c/src/builder/snapshots/test__define_struct.snap
---
created: "2019-12-08T16:29:55.795006431Z"
creator: insta@0.7.4
source: rustc_codegen_c/src/builder/test.rs
expression: output
---
/* generated by r2c2 version 0.0.0 */
#include <stdint.h>
#include <stdbool.h>

/*                                                    */
/*                    END PREAMBLE                    */
/*                                                    */

struct my_struct;  /* (test-symbol: no associated Rust name) */
union my_union;  /* (test-symbol: no associated Rust name) */
struct my_struct {  /* (test-symbol: no associated Rust name) */
    uint32_t intfield;
    uint32_t * intptr;
    void * voidptr;
    bool shevik;
};

