rustc_codegen_c/src/builder/snapshots/test__define_struct_fn_ptr.snap
---
created: "2019-12-08T16:29:55.794984166Z"
creator: insta@0.7.4
source: rustc_codegen_c/src/builder/test.rs
expression: output
---
/* generated by r2c2 version 0.0.0 */
#include <stdint.h>
#include <stdbool.h>

/*                                                    */
/*                    END PREAMBLE                    */
/*                                                    */

struct my_struct {  /* (test-symbol: no associated Rust name) */
    uint32_t * (*f1)(uint32_t _1, uint32_t _2, bool _3);
    void (*f2)(uint32_t _1, uint32_t _2, bool _3);
    uint32_t (*f3)(void);
};

